# 020202

answer/: CMakeLists.txt  package.xml
answer/include/answer/: data_protocol.hpp  game_config.hpp  map_generator.hpp  navigation_node.hpp  path_planner.hpp  port_handler.hpp  robot_controller.hpp  topic_config.hpp  vision_node.hpp  vision_processor.hpp
answer/launch/: robot.launch.py
answer/src/: map_generator.cpp  navigation_node.cpp  path_planner.cpp  port_handler.cpp  robot_controller.cpp  vision_node.cpp  vision_processor.cpp
info_interfaces/: CMakeLists.txt  package.xml
info_interfaces/src/msg/: Area.msg  Robot.msg
